--- a/templates/logon/login.html
+++ b/templates/logon/login.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="am-form-group">
-                        <button type="button" class="am-btn am-btn-primary  am-btn-block tpl-btn-bg-color-success  tpl-login-btn">提交</button>
+                        <button type="button" class="am-btn am-btn-primary  am-btn-block tpl-btn-bg-color-success  tpl-login-btn">登录</button>
                     </div>
                 </form>
             </div>
