--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -7,6 +7,7 @@
 {% block content %}
 <body data-type="index">
     <script src="/static/assets/js/theme.js"></script>
+
     <!-- 头部 -->
     <header>
         <!-- logo -->
@@ -143,16 +144,20 @@
                 </div>
             </div>
     </header>
-
-    <!-- 侧边导航栏 -->
-    <div class="left-sidebar">
-        <!-- 菜单 -->
-        <ul class="sidebar-nav">
-            <li class="sidebar-nav-link">
-                <a href="javascript:;" class="sidebar-nav-sub-title">
-                    <i class="am-icon-table sidebar-nav-link-logo"></i> 数据列表
+        <!-- 侧边导航栏 -->
+        <div class="left-sidebar">
+                <!-- 菜单 -->
+            <ul class="sidebar-nav">
+                <li class="sidebar-nav-link">
+                    <a href="index.html" class="active">
+                        <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="javascript:;" class="sidebar-nav-sub-title">
+                        <i class="am-icon-table sidebar-nav-link-logo"></i> 数据列表
                         <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
-                </a>
+                    </a>
                     <ul class="sidebar-nav sidebar-nav-sub">
                         <li class="sidebar-nav-link">
                             <a href="table-list.html">
@@ -166,8 +171,30 @@
                             </a>
                         </li>
                     </ul>
-            </li>
-        </ul>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="sign-up.html">
+                        <i class="am-icon-clone sidebar-nav-link-logo"></i> 注册
+                        <span class="am-badge am-badge-secondary sidebar-nav-link-logo-ico am-round am-fr am-margin-right-sm">6</span>
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="login.html">
+                        <i class="am-icon-key sidebar-nav-link-logo"></i> 登录
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="404.html">
+                        <i class="am-icon-tv sidebar-nav-link-logo"></i> 404错误
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    <!-- 内容区域 -->
+    <div class="tpl-content-wrapper">
+
     </div>
+    <script src="/static/assets/js/app.js"></script>
 </body>
 {% endblock content %}
