--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="/static/assets/css/app.css">
     <script src="/static/assets/js/jquery.min.js"></script>
     <script src="/static/assets/js/amazeui.min.js"></script>
+    <script src="/static/assets/js/amazeui.datatables.min.js"></script>
+    <script src="/static/assets/js/dataTables.responsive.min.js"></script>
+    <script src="/static/assets/js/echarts.min.js"></script>
 </head>
 
 {% block content %}
